2007-10-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Handle mswin32 on VC6.

2007-09-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Gem::Specification is now
	forward-compatible while loading.

2007-09-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache_entry.rb: Correctly handle URIs.
	* lib/rubygems/remote_fetcher.rb: ditto.
	* lib/rubygems/remote_options.rb: Add --update-sources option.  Patch
	#14246 submitted by Alan Francis.
	* lib/rubygems/config_file.rb: Add update_sources setting to control
	automatic refreshing of sources (patch #14246).  Fix bug where things
	would be overwritten in ~/.gemrc when they shouldn't.

2007-09-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems.rb: Gem.ruby now returns the full path.  Added
	Gem.prefix to make self updating work right.
	* setup.rb, pre-install.rb, post-install.rb: Replace with a small,
	simple setup script that works.
	* lib/rubygems/commands/update_command.rb: Pass rdoc, ri and prefix
	flags down to setup.rb when self updating.

2007-09-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/version_option.rb: Always include RUBY platform,
	allow RUBY platform as an option.
	* lib/rubygems/specification.rb: Gems with non-ruby platform sort
	last (first in preference for installation).
	* lib/rubygems/platform.rb: Allow matching of legacy platforms.
	* lib/rubygems/source_index.rb: Add only_platform option to #search.

2007-09-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/fetch_command.rb: `gem fetch` downloads a gem
	to the current directory.  Feature request #10752 by Bret Pettichord.
	* lib/rubygems/commands/local_remote_options.rb, etc.: Fix spelling of
	'threshold'.
	* lib/rubygems/installer.rb: Revert feature request #8818, it
	interferes with `ruby -S` and multiple versions of ruby (1.8 and 1.9).
	* lib/rubygems/dependency_installer.rb: Fix a bug where the wrong
	platform gem would be installed.